Review Request 7404 see PLS-2703, PLS-2702 - fix for top attributes not showing sometimes - added scroll bar for overflowing descriptions

--- a/le-ui/projects/leadprioritization/app/enrichment/views/EnrichmentWizardView.scss
+++ b/le-ui/projects/leadprioritization/app/enrichment/views/EnrichmentWizardView.scss
@@ -340,7 +340,8 @@
                     border-left: 0;
                     border-right: 0;
                     overflow: hidden;
-                    max-height: 9.5em;
+                    overflow-y: auto;
+                    max-height: 9.8em;
                     span {
                         font-size: 12px;
                         color: black;
